fix .main-container z-index issue

--- a/web/wp-content/themes/lfevents/src/assets/scss/modules/_content.scss
+++ b/web/wp-content/themes/lfevents/src/assets/scss/modules/_content.scss
@@ -1,6 +1,8 @@
 .main-container {
   // @include xy-grid-container;
   background-color: $white;
+  position: relative;
+  z-index: 1;
 }
 
 .main-grid {
